--- a/src/styles/pulseui-base.scss
+++ b/src/styles/pulseui-base.scss
@@ -37,6 +37,7 @@
 
 // Card Component
 @use "../components/atoms/Card/Card.module.scss";
+@use "../components/atoms/LineChart/LineChart.module.scss";
 
 // Alert Component
 @use "../components/atoms/Alert/Alert.module.scss";
